--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@rails/activestorage": "^6.0.3-1",
@@ -64,7 +65,6 @@
     "@types/react-dom": "^16.0.6",
     "axios": "^0.19.2",
     "babel-core": "7.0.0-bridge.0",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
@@ -118,6 +118,6 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
     "tslint-react": "^3.6.0",
-    "webpack-dev-server": "3.11.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
